--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,41 @@ body {
     display: grid;
 }
 
+header {
+    background-color: #0f1629ff;
+    color: white;
+}
+
+nav {
+    background-color: #f03c4eff;
+    color: white;
+}
+
+section .hero {
+    background-color: #4c87c7ff;
+    color: white;
+}
+
+main {
+    background-color: #23344aff;
+    color: white;
+}
+
+aside>div.image {
+    background-color: #c1e4e6ff;
+    color: black;
+}
+
+aside>div.extra {
+    background-color: #4dbd98ff;
+    color: black;
+}
+
+.banner {
+    background-color: #ffd269ff;
+    color: black;
+}
+
 @media (min-width: 1024px) {
 
     .container {
@@ -13,50 +48,55 @@ body {
         max-width: 800px;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr 4fr 4fr 2fr;
-        align-items: center;
+        text-align: center;
     }
 
     header {
-        background-color: black;
-        color: white;
+        height: 100%;
+        display: grid;
     }
 
     nav {
-        background-color: tomato;
-        color: white;
         grid-column: 2 / 5;
         grid-row: 1;
+        height: 100%;
+        display: grid;
     }
 
     section .hero {
-        background-color: aqua;
-        color: white;
         grid-column: 1 / 5;
+        height: 100%;
+        display: grid;
     }
 
     main {
-        background-color: blue;
-        color: white;
         grid-column: 1 / 3;
+        height: 100%;
+        display: grid;
     }
 
     aside {
         grid-column: 4 / 5;
+        height: 100%;
+        display: grid
     }
 
     aside>div.image {
-        background-color: aquamarine;
-        color: black;
+        display: grid;
     }
 
     aside>div.extra {
-        background-color: greenyellow;
-        color: black;
+        display: grid;
     }
 
     .banner {
-        background-color: yellow;
-        color: black;
         grid-column: 1 / 5;
+        height: 100%;
+        display: grid;
+    }
+
+    p {
+        justify-self: center;
+        align-self: center;
     }
 }
