--- a/layouts--flexbox/style.css
+++ b/layouts--flexbox/style.css
@@ -1,14 +1,37 @@
-body,
-html {
+body {
     margin: 0;
+}
+
+.container {
+    margin: 15px;
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    text-align: center;
+    line-height: normal;
+}
+
+.row-container {
+    display: flex;
+    flex-direction: row;
 }
 
 header {
     background-color: tomato;
+    height: 100px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+aside {
+    height: 200px;
+    width: 100px;
+    border-radius: 10px;
 }
 
 #aside-1 {
     background-color: yellow;
+    order: -1;
 }
 
 #aside-2 {
@@ -17,13 +40,12 @@ header {
 
 main {
     background-color: aqua;
+    height: 200px;
+    margin: 0 10px 10px 10px;
 }
 
 footer {
     background-color: palegreen;
-}
-
-.container {
-    margin: 0 auto;
-    max-width: 1000px;
+    height: 80px;
+    border-radius: 10px;
 }
