--- a/layouts--flexbox/style.css
+++ b/layouts--flexbox/style.css
@@ -51,3 +51,21 @@ footer {
     height: 80px;
     border-radius: 10px;
 }
+
+@media (max-width: 800px) {
+    main {
+        flex: 1;
+    }
+
+    #aside-1 {
+        /* order: 1; */
+    }
+
+    #aside-2 {
+        /* order: 2; */
+    }
+
+    main {
+        /* order: 2; */
+    }
+}
